# deciphon-py

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  TODO.txt  build_ext.py  pyproject.toml  rob.py  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  deploy.yml
deciphon/: __init__.py  _float.py  _output.py  _partition.py  _version.py  alphabet.py  api.py  build_ext.py  cli.py  cli_api.py  dcp.h  dcp_profile.py  deciphon.h  example.py  hmmer_filter.py.old  hmmer_model.py  imm.h  input.py  input.py.old  legacy_result.py  lprob.py  meta.py  metadata.py  model.py  models.py  output.py  output_writer.py  press.py  pressd.py  profile.py  protein_profile.py  protein_profile.py.old  result.py  rob.py  scan.py  scand.py  seqfile.py  server.py  server.py.old  sha256.py  (+5 more)
deciphon/gff/: _gff.py
deciphon/test/: AE014075.1.fasta  conftest.py  minifam.json  minifam_consensus.fasta  pfam24_AE014075.json  test_io.py
test/: conftest.py  test_press.py
