[tool.poetry]
name = "deciphon"
version = "0.5.0"
description = ""
authors = ["Danilo Horta <danilo.horta@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cffi = "^1.15.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"
pyright = "^1.1.288"
cmake = "^3.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
