[tool.poetry]
name = "deciphon"
version = "0.7.0"
description = "Individually annotate long, error-prone nucleotide sequences into proteins"
authors = ["Danilo Horta <danilo.horta@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cffi = "*"
typer = { extras = ["all"], version = ">=0.7.0" }
h3daemon = ">=0.12.0"
gmqtt = ">=0.6.11"
uvloop = ">=0.17.0"
pydantic = ">=1.10.4"
blx = ">=0.2.0"
deciphon-core = ">=0.8.1"
requests = ">=2.28.2"
fasta-reader = ">=3.0.0"
ijson = ">=3.1.0"
hmmer = ">=0.2.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
blx = ">=0.2.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dcp = 'deciphon.cli:app'
dcp-api = 'deciphon.api.cli:app'
