[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Invisible sequence scanner
download_url = https://github.com/EBI-Metagenomics/deciphon-py
keywords = hmm, profile, dna, protein
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = deciphon
url = https://github.com/EBI-Metagenomics/deciphon-py

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    assertpy>=1.1
    biopython>=1.78
    click>=7.0.0
    fasta-reader>=1.0.0
    hmmer-reader>=0.0.14
    hmmer>=0.0.12
    imm>=0.0.2
    in-place>=0.4.0
    nmm>=0.0.14
    pooch>=1.3.0
    pytest>=5.3.5
    tqdm>=4.42.1

[aliases]
test = pytest

[flake8]
ignore = E501,E741,E203,W503,W0212,W0622,R0915,E743

[pycodestyle]
ignore = E741,E743,E203
max-line-length = 88

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[tool:pytest]
addopts =
    --doctest-modules
    --ignore="setup.py"
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
markers =
    slow: mark test as slow to run
